# VIA

./: .gitattributes  .gitignore  README.md
AnalyzeResult/Realistic Dependency Extraction & Vulnerable Code Call Path Analysis/: AnalyzeRes.7z
DataSet/: Readme.md  Triad.csv  VUL_FUNs.csv  cve_cwe_mapping.csv  cwe_stats.csv
RQ_data/RQ1/: CWE_type.txt  draw1.py  draw3.py  draw4.py  llm_eval.pkl  llmeval.py  stats.py
RQ_data/RQ2/: call_risk.py  draw.py  draw2.py  draw3.py
RQ_data/RQ3/: draw2.py
RQ_data/RQ4/: draw1.py  real_dep_Statistics.py
RQ_data/RQ5/: draw.pptx  eval.py
RQ_data/dataset_code_stats/: draw.py
RQ_data/summary/: Stepwise Vulnerability Reduction Flow.pptx
Tool/: README.md
Tool/LLMVulnerabilityExistence/: llm_analyze.py
Tool/LLMVulnerabilityExistence/getDectionData/: GetdetectionCode.py  GetpatchCode.py  GetpatchDescription.py  Hits.py  Vulnerable Cmpnts and Vers.py  ccg.py  extract_functions.py  findComparison.py  main.py  output_functions.json  parse_modified_ranges.py
Tool/LLMVulnerabilityExistence/getDectionData/data/compondent/flask@1.1.3/Flask-1.1.3/: setup.cfg
Tool/LLMVulnerabilityExistence/getDectionData/data/compondent/flask@1.1.3/Flask-1.1.3/src/Flask.egg-info/: PKG-INFO  requires.txt
Tool/LLMVulnerabilityExistence/test_data/: CVE-2009-2959@a08ee48e796ae66c54fca6a087b4adce7d1d6c06@buildbot@0.7.11p3
Tool/PathFind/: call_graph_gen.py  main.py  requirements.txt
Tool/PathFind/AnalyzeRes/: CVE-2023-23931@cryptography@3.4.8@garbevents@2.0.9  CVE-2024-37891@urllib3@2.0.3@docker@6.1.3
Tool/PathFind/core/: call_graph_gen.py  (+3 more)
(+56116 files in other folders)
