[metadata]
license_file = LICENSE.rst

[bdist_wheel]
universal = true

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = 
	flask
	tests

[coverage:paths]
source = 
	src/flask
	.tox/*/lib/python*/site-packages/flask
	.tox/*/site-packages/flask

[flake8]
select = B, E, F, W, B9
ignore = 
	E203
	E402
	E501
	E722
	W503
max-line-length = 80
per-file-ignores = 
	**/__init__.py: F401
	src/flask/_compat.py: E731, B301, F401

[egg_info]
tag_build = 
tag_date = 0

